Se corrigen clases y se agrega la parte de rabbit